後台電影資訊- 列表頁加參數
